--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -72,7 +72,7 @@ jobs:
 
           snapcraft remote-build --launchpad-accept-public-upload --build-for=${ARCHITECTURE}
           release_line=$(grep -m 1 '<release version=' "data/se.sjoerd.Graphs.appdata.xml.in.in")
-          echo version=$(echo "$release_line" | sed -n 's/.*version="\([^"]*\)".*/\1/p')
+          version=$(echo "$release_line" | sed -n 's/.*version="\([^"]*\)".*/\1/p')
           echo "snap=graphs_${version}_${ARCHITECTURE}.snap" >> "$GITHUB_OUTPUT"
 
       - name: Upload artifact
