show the build-log and fail if the file is not found

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -73,7 +73,14 @@ jobs:
           snapcraft remote-build --launchpad-accept-public-upload --build-for=${ARCHITECTURE}
           release_line=$(grep -m 1 '<release version=' "data/se.sjoerd.Graphs.appdata.xml.in.in")
           version=$(echo "$release_line" | sed -n 's/.*version="\([^"]*\)".*/\1/p')
+          if [ ! -f "graphs_${version}_${ARCHITECTURE}.snap" ]; then
+            echo "Snap file not found, check the build log below to find error"
+            cat 'graphs_${ARCHITECTURE}.txt'
+            exit 1
+          fi
+          cat "graphs_${ARCHITECTURE}.txt"
           echo "snap=graphs_${version}_${ARCHITECTURE}.snap" >> "$GITHUB_OUTPUT"
+
 
       - name: Upload artifact
         uses: actions/upload-artifact@v3
