--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -82,12 +82,14 @@ jobs:
           echo "snap=graphs_${version}_${ARCHITECTURE}.snap" >> "$GITHUB_OUTPUT"
 
 
-      - name: Upload artifact
-        uses: actions/upload-artifact@v3
+      - name: Publish to edge channel
+        uses: snapcore/action-publish@v1
+        env:
+          SNAPCRAFT_STORE_CREDENTIALS: ${{ secrets.STORE_LOGIN }}
+        if: ${{ github.event_name == 'push' && github.event.ref == 'refs/heads/main' }}
         with:
-          name: Graphs-${{ matrix.architecture }}
-          path: ${{ steps.build.outputs.snap }}
-
+          snap: ${{ steps.build.outputs.snap }}
+          release: edge
 
   flake8-lint:
     name: flake8
