--- a/data/se.sjoerd.Graphs.appdata.xml.in.in
+++ b/data/se.sjoerd.Graphs.appdata.xml.in.in
@@ -51,6 +51,11 @@
     </screenshot>
   </screenshots>
   <releases>
+    <release version="1.7.1" date="2024-01-11">
+      <description translatable="no">
+        <p>Minor patch that sets the legend position strings to title case, and updates the locals to the latest version on Weblate.</p>
+      </description>
+    </release>
     <release version="1.7.0" date="2024-01-10">
       <description translatable="no">
         <p>Version 1.7 marks our biggest release yet. With a migration to GNOME 45 and a new UI overhaul with a revamped style editor.
